<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.zerodimension.emocube.tech.zerodimension.emocube.ControlActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_m">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_tx"
            android:textSize="@dimen/sp_m" />

        <TextView
            android:id="@+id/statusTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_s" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_t"
            android:layout_marginRight="@dimen/size_t"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="onClickPlay"
            android:orientation="vertical"
            android:padding="@dimen/size_s">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status_start_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_t"
            android:layout_marginRight="@dimen/size_t"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="onClickStop"
            android:orientation="vertical"
            android:padding="@dimen/size_s">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/stop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status_stop_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_t"
            android:layout_marginRight="@dimen/size_t"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="onClickSave"
            android:orientation="vertical"
            android:padding="@dimen/size_s">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status_save_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_t"
            android:layout_marginRight="@dimen/size_t"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="onClickSlide"
            android:orientation="vertical"
            android:padding="@dimen/size_s">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/slide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status_slide_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/controlLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <TextView
            android:textSize="@dimen/sp_l"
            android:padding="@dimen/size_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting" />
    </LinearLayout>

</RelativeLayout>
